--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,6 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 
-  <audio id="notif-sound" src="excuse-me-ringtone-male.mp3" preload="auto"></audio>
+  <audio id="notif-sound" src="DarrenMcRakijaSerbericanDream.mp3" preload="auto"></audio>
 </body>
 </html>
