--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>🦕 Dino-Queueueueueue</title>
+  <title>🦕 Dino-Queueueueueue 🦖</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
