Add one very important step for humanity

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>🦕 Dino-Queueueueueue</title>
+  <title>🦕 Dino-Queueueueueue 🦖</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🦕 Dino-Queue</h1>
+  <h1>🦕 Dino-Queue 🦖</h1>
 
   <div id="slots-info"></div>
   <ul id="queue-list"></ul>
