--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>🦕 Dino-Queueueueueue 🦖</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="10AnniversaryTeamspeakIcon_round.png" type="image/png" />
 </head>
 <body>
   <h1>🦕 Dino-Queue 🦖</h1>
