--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
   <button onclick="setMaxSlots()">Set</button>
 
   <div id="watch-status"></div>
+  <label for="volume-slider">🔊 Lautstärke:</label>
+  <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5" />
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
